--- a/community.html
+++ b/community.html
@@ -134,6 +134,9 @@
       <h1>Other Sites</h1>
       <p>
       <a class="link" href="https://hyperacusiscentral.org/" target="_blank" rel="noopener noreferrer">Hyperacusis Central</a> <br> A collection of personal stories from those affected by hyperacusis, including many accounts of severe and life-altering cases.  These stories provide an in-depth look into the lives of individuals severely affected by the condition, offering valuable insight into just how serious hyperacusis can become.
+      </p>     
+      <p>
+      <a class="link" href="https://tinnitusquest.com/" target="_blank" rel="noopener noreferrer">Tinnitus Quest</a> <br> Currently raising funds to support research focused on developing new treatments for tinnitus.
       </p>      
       
     </article>
