--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -118,7 +118,7 @@ In our opinion, <strong>noxacusis represents a more severe manifestation of hype
 
   <p>
  We have also observed that certain individuals develop <strong>heightened sound sensitivity secondary to neuropathic pain (neuralgia)</strong>, which <i>should not be considered the same disorder as pain hyperacusis (noxacusis)</i>. These patients often report a burning, aching, or stabbing pain around the ear that can radiate to the face and head. While the pain or burning can be severe and may both cause and be triggered by sound sensitivity, the underlying mechanism differs from that of hyperacusis. In pain hyperacusis (noxacusis), the <strong> pain occurs directly in response to sounds that exceed the individual’s tolerance threshold</strong>, is typically localized to the middle ear (deep to the tympanic membrane), and is often described as a sharp or stabbing pain. 
-  <i>Based on our observations, individuals with neuropathic pain and sound sensitivity are more likely to experience improvement with <a class="link" href="medications.html#clomipramine">clomipramine</a> than those with true loudness hyperacusis.</i>
+  <i>Based on our observations, individuals with sound sensitivity related to neuropathic pain are more likely to experience improvement with <a class="link" href="medications.html#clomipramine">clomipramine</a> than those with true loudness hyperacusis.</i>
   </p>
 
   <p>
@@ -249,7 +249,9 @@ In our opinion, <strong>noxacusis represents a more severe manifestation of hype
       mistakenly assume that patients with sound intolerance are experiencing misophonia or
       anxiety-related sound aversion.
     </p>
-
+    <p>
+    This distinction is important because many reported “success stories” with sound therapy likely involve patients who actually had misophonia, phonophobia, or very mild hyperacusis that was capable of improving on its own. These cases respond to sound therapy not because it treats true sensory or pain-based sound intolerance, but because their underlying issue is psychological or behavioral rather than auditory or nociceptive.
+    </p>
     <h2>Hyperacusis</h2>
     <ul>
       <li>Physical intolerance to normal sounds.</li>
