--- a/medications.html
+++ b/medications.html
@@ -116,7 +116,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       <h1>Clomipramine</h1>
 
   <p>
-  Clomipramine, a tricyclic antidepressant (TCA), warrants special mention as it has become the most widely used medication for managing symptoms of hyperacusis and noxacusis, as well as sound sensitivity associated with neuralgia. Among the various pharmacologic options explored, clomipramine has shown the most consistent anecdotal benefit in reducing auditory hypersensitivity, pain, and related anxiety.
+  Clomipramine, a tricyclic antidepressant (TCA), warrants special mention as it has become the most widely used medication for managing symptoms of hyperacusis, noxacusis, and sound sensitivity associated with neuralgia. Among the various pharmacologic options explored, clomipramine has shown the most consistent anecdotal benefit in reducing auditory hypersensitivity, pain, and related anxiety.
   </p>
   <p>
   Despite reports of success from many patients, a significant number experienced little to no improvement in their symptoms while using clomipramine. At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and believe we have identified a specific subgroup that responds most favorably to clomipramine. These patients typically share the following characteristics:
@@ -135,6 +135,9 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
   </p>
   <p>
   Although clomipramine is typically introduced at a low dose, it often must be titrated to doses exceeding 200 mg per day before any meaningful improvement in symptoms is observed, which increases the likelihood of adverse effects.
+  </p>
+  <p>
+  
   <i>Some patients have reported fewer side effects and less pronounced changes in tinnitus when using the sustained-release (SR) formulation of clomipramine. The original version of clomipramine is available in the United States, but the sustained-release version is not and must either be purchased from an international pharmacy or prepared at a compounding pharmacy, which are available in most states</i>.
   </p>
   <p>
@@ -144,20 +147,28 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       <h1>Botox</h1>
 
       <p>
-        Botox (botulinum toxin type A) has been explored as a potential treatment for hyperacusis, middle ear myoclonus (MEM), 
+        Botox (botulinum toxin type A) has been studied as a potential treatment for hyperacusis, noxacusis, middle ear myoclonus (MEM), 
         and tonic tensor tympani syndrome (TTTS) due to its ability to temporarily weaken overactive muscles involved in 
         abnormal sound perception or middle ear movement. 
       </p>
       <p>
         In cases of MEM or TTTS, conditions characterized by involuntary 
         contractions of the tensor tympani or stapedius muscles, Botox injections have been used to reduce muscle hyperactivity 
-        and relieve the associated fluttering, thumping, or pressure sensations in the ear. 
+        and relieve the associated fluttering, thumping, or pressure sensations in the ear. TTTS often occurs alongside hyperacusis and noxacusis, so the benefit of Botox in some hyperacusis cases may stem from its ability to relax the tensor tympani muscle.
         
         </p>
+
+
+
         <p>
-        The toxin is most commonly injected into the tensor veli palatini (TVP) muscle which is closely related to the tensor tympani muscle through a shared tendinous attachement.
+        The toxin is most commonly injected into the tensor veli palatini (TVP) muscle which is closely related to the tensor tympani muscle through a shared tendinous attachement. The TVP tenses the soft palate and opens the Eustachian tube, helping to equalize pressure in the middle ear.
         In rare cases, the toxin is directly injected into the tensor tympani and stapedius muscles using a transcanal approach (through the tympanic membrane) under endoscopic guidance.
       </p>
+
+                    <div class="image-row-1">
+  <img src="images/tvp_1.jpg" alt="Image 1" class="img-1">
+  <img src="images/tvp_2.avif" alt="Image 2" class="img-2">
+      </div>
 
        <p>
         The video below demonstrates injection of Botox into the tensor veli palatini (TVP) using a transnasal endoscopic approach. You will notice the needle tip within the TVP muscle near the lower-left edge of the field of view. The physician who perfomed this procedure provided a brief description of his technique:
@@ -189,16 +200,16 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       <h1>Sphenopalatine Ganglion (SPG) Block</h1>
 
     <p>
-    The sphenopalatine ganglion (SPG) block is a minimally invasive procedure in which medication is delivered to the sphenopalatine ganglion (a parasympathetic nerve bundle located behind the nasal cavity) to interrupt pain and autonomic signaling. The block may be performed using a soft transnasal applicator saturated with anesthetic, a catheter-based delivery system (syringe attached to a thin catheter that is guided through the nasal cavity), or in some cases a needle introduced under endoscopic or fluoroscopic guidance. 
+    The sphenopalatine ganglion (SPG) block is a minimally invasive procedure in which local anesthetia or steroids are delivered to the sphenopalatine ganglion (a parasympathetic nerve bundle located behind the nasal cavity) to interrupt pain and autonomic signaling. The block may be performed using a soft transnasal applicator (cotton swab) saturated with anesthetic, a catheter-based delivery system (syringe attached to a thin catheter that is guided through the nasal cavity), or in some cases a needle introduced under endoscopic or fluoroscopic guidance. 
     </p>
     <p>
-    Most commonly, clinicians use a local anesthetic such as lidocaine or the longer-acting bupivacaine. The procedure has traditionally been used for migraine, facial pain, and autonomic disorders, but it has more recently been explored as a potential treatment for hyperacusis and noxacusis because of its ability to modulate trigeminal activity, middle-ear muscle tension, and sound-evoked neuropathic pain.
+    Most commonly, clinicians use a local anesthetic such as lidocaine or the longer-acting bupivacaine. The procedure has traditionally been used for migraine, facial pain, and autonomic disorders, but it has more recently been explored as a potential treatment for hyperacusis and noxacusis because of its ability to reduce trigeminal activity, middle-ear muscle tension, and sound-evoked neuropathic pain.
     </p>
     <p>
-    In some practices, a corticosteroid (such as triamcinolone or dexamethasone) is added to the anesthetic in an effort to extend the therapeutic effect. While steroids do not produce a true long-term nerve block like radiofrequency ablation, they may prolong symptom relief beyond the duration of local anesthesia alone, which typically lasts only a few hours. Evidence for SPG blocks in hyperacusis and noxacusis remains limited, but some patients report short-term reductions in auditory pain and improved sound tolerance following the procedure.
+    In some practices, a corticosteroid (such as triamcinolone or dexamethasone) is added to the anesthetic to extend the therapeutic effect. While steroids do not produce a true long-term nerve block like radiofrequency ablation, they may prolong symptom relief beyond the duration of local anesthesia alone, which typically lasts only a few hours. Evidence for SPG blocks in hyperacusis and noxacusis remains limited, but some patients report short-term reductions in auditory pain and improved sound tolerance following the procedure.
     </p>
     <p>
-    The video below demostrations a technique for targeting the sphenopalatine ganglion (SPG) using a needle under fluoroscopic guidance. The SPG can also be accessed with a needle using a transnasal endoscopic approach (not shown here).
+    The video below demostrates a technique for accessing the sphenopalatine ganglion (SPG) using a needle under fluoroscopic guidance. The SPG can also be accessed with a needle using a transnasal endoscopic approach (not shown).
     </p>
     <p>
     <div class="video-container">
@@ -209,7 +220,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
 </div>
 </p>
     <p>
-    The main advantage of using a needle is that anesthesia or steroids can be delivered directly to the SPG and surrounding tissues, whereas the cotton swab and catheter methods (shown below) only apply anesthesia to the mucosa overlying the ganglion.
+    The key advantage of using a needle is the ability to deliver local anesthetia or steroids directly into the SPG and surrounding tissues, whereas the cotton swab and catheter methods (shown below) only apply local anesthesia to the mucosa overlying the ganglion and rely on passive diffusion.
     </p>
 
       <div class="image-row">
