--- a/mem.html
+++ b/mem.html
@@ -111,6 +111,7 @@
       or sudden noise to decrease sound transmission and protect the inner ear, but in TTTS, it can tighten involuntarily 
       or remain contracted for extended periods. 
      </p>
+
      <p>These muscle spasms can lead to 
       sensations of pain, fullness, pressure, or fluttering in the ear, and may be triggered 
       by everyday sounds or specific frequencies that are not necessarily loud. <strong>TTTS is often associated 
@@ -127,6 +128,10 @@
       <li>Believed to involve overactivation of the middle ear reflex and increased muscle excitability.</li>
       <li>Diagnosis is primarily clinical, based on symptoms and ruling out other ear disorders.</li>
     </ul>
+
+     <p>
+     <img src="images/tensor_tympani_dark.png" class="full-width-image-silverstein">
+     </p>
 
     <p>
     A <a class="link" href="https://drive.google.com/file/d/1bS_f919kmbgbfTjBa-xfWXOXR60Q5-x1/view?pli=1" target="_blank" rel="noopener noreferrer">2019 article published by Noreña et al.</a> describes acoustic shock and how it relates to the tensor tympani muscle (TTM). Key points within the article have been highlighted.
