--- a/patch.html
+++ b/patch.html
@@ -72,7 +72,7 @@
 
   <main>
     <article>
-      <h1>Tympanic Membrane Paper Patching</h1>
+      <h1>Paper Patching</h1>
 
       <p>
         Tympanic membrane paper patching is a minimally invasive procedure that was originally developed to treat perforations of the tympanic membrane and to promote faster healing after a myringotomy. More recently, it has been been explored as a potential treatment for hyperacusis and noxacusis. 
@@ -91,7 +91,7 @@
         such as cartilage reinforcement of the tympanic membrane or Silverstein round/oval window reinforcement may be considered. 
       </p>
       <p>
-        Although clinical data are limited, tympanic membrane patching is valued for its simplicity, 
+        Although clinical data is limited, tympanic membrane patching is valued for its simplicity, 
         reversibility, low risk profile, and potential to provide some relief for patients with hyperacusis and noxacusis. 
       </p>
       <p>
@@ -102,13 +102,13 @@
       </p>
       <P>
       The images above show placement of paper patches on the tympanic membrane. The image on the left shows a single patch covering the inferior half of the eardrum, while the image on the right shows two patches covering the superior half.
-      The images are from a <a class="link" href="documents/boedts.pdf" target="_blank" rel="noopener noreferrer">2014 article published by Dr. Michael Boedts</a>, which discusses the use of tympanic membrane paper patching to alleviate symptoms of patulous Eustachian tube syndrome. 
+      These images are from a <a class="link" href="documents/boedts.pdf" target="_blank" rel="noopener noreferrer">2014 article published by Dr. Michael Boedts</a>, which describes the use of tympanic membrane paper patching to alleviate symptoms of patulous Eustachian tube syndrome. 
       </p>
       <p>
-      A <a class="link" href="https://hyperacusiscentral.org/boedts-interview/" target="_blank" rel="noopener noreferrer">recent interview with Dr. Boedts is available on Hyperacusis Central</a>, in which he discusses paper patching, Botox, local anesthesia (bupivacaine), and how these approaches can be used to treat pain hyperacusis.
+      In a <a class="link" href="https://hyperacusiscentral.org/boedts-interview/" target="_blank" rel="noopener noreferrer">recent interview with Hyperacusis Central</a>, Dr. Boedts discusses paper patching, Botox, local anesthesia (bupivacaine), and how these approaches can be used to treat pain hyperacusis.
       </p>
             <p>
-      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a>
+      There are a few patients <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">in this spreadsheet</a> who have described their experiences with tympanic membrane paper patching. 
       </P>
     </article>
 <a href="#top" class="back-to-top" aria-label="Back to top"></a>
