--- a/medications.html
+++ b/medications.html
@@ -182,10 +182,12 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       </ul>
       </p>
       <p>
+    <div class="video-wrapper">
       <video width="640" height="360" controls poster="video/poster.png">
   <source src="video/tvp_botox.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+</div>
 </p>
       <p>
       In some reported cases, patients have experienced a significant reduction in middle ear spasms, sound sensitivity, and pain following Botox treatment, with effects often lasting several months. However, other patients have reported little to no benefit. The available evidence is limited to a small number of case reports and pilot studies, and outcomes vary widely depending on injection technique and the underlying cause of the patient’s symptoms. Consequently, Botox treatment for hyperacusis, MEM, and TTTS is considered experimental.
@@ -211,11 +213,12 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
     The video below demonstrates a technique for accessing the sphenopalatine ganglion (SPG) using a needle under fluoroscopic guidance. The SPG can also be accessed with a needle using a transnasal endoscopic approach (not shown).
     </p>
     <p>
-
+<div class="video-wrapper">
  <video width="640" height="360" controls poster="images/spg_block.jpg">
   <source src="video/spg_block.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+</div>
 
 </p>
     <p>
