--- a/medications.html
+++ b/medications.html
@@ -214,7 +214,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
     </p>
     <p>
 <div class="video-wrapper">
- <video width="640" height="360" controls poster="images/spg_block.jpg">
+ <video width="640" height="360" controls poster="images/poster.png">
   <source src="video/spg_block.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
