--- a/about.html
+++ b/about.html
@@ -75,20 +75,13 @@
       <h1>About Hyperacusis Guide</h1>
 
       <p>
-        We created <i>Hyperacusis Guide</i> to address the significant lack of reliable information 
-        and the prevalence of misleading or incorrect guidance on the internet regarding 
-        severe hyperacusis. Many patients who are newly diagnosed ─ or who face a high risk 
-        of rapid worsening ─ struggle to find accurate, evidence-informed resources that help 
-        them understand their condition, manage symptoms safely, and make informed decisions 
-        about treatment and daily life. 
+        We created <i>Hyperacusis Guide</i> to address the lack of reliable information and the prevalence of misleading or inaccurate guidance, both online and within the medical community, regarding hyperacusis. People who are newly affected often struggle to find resources to help them understand their condition, manage symptoms safely, and make informed choices about treatment and daily life.
       </p>
       <p>
-      Every member of the team at <i>Hyperacusis Guide</i> lives with varying degrees of hyperacusis, noxacusis, and tinnitus, and we want to share our experiences and advice with others who are suffering from the same conditions.
+      <i>Hyperacusis Guide</i> is made up of individuals who live with hyperacusis, noxacusis, and tinnitus, and we want to share our experiences and advice with others who are suffering from the same conditions.
       </p>
       <p>
-        Our goal is to provide clear, practical, and trustworthy 
-        guidance specifically tailored to those with extreme sound sensitivity, helping them 
-        navigate their journey with knowledge, safety, and support.
+       Our goal is to provide clear and practical guidance for all individuals living with these conditions, especially those who are newly affected, to help them navigate their journey with knowledge, safety, and support.
       </p>
 
       <p>
