--- a/medications.html
+++ b/medications.html
@@ -147,8 +147,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       <h1>Botox</h1>
 
       <p>
-        Botox (botulinum toxin type A) has been studied as a potential treatment for hyperacusis, noxacusis, middle ear myoclonus (MEM), 
-        and tonic tensor tympani syndrome (TTTS) due to its ability to temporarily weaken muscles that have become abnormally hyperactive, contributing to heightened sound sensitivity and pain.
+        Botox (botulinum toxin type A) has been investigated as a potential treatment for hyperacusis, noxacusis, middle ear myoclonus (MEM), and tonic tensor tympani syndrome (TTTS) because of its ability to temporarily weaken overactive muscles that may contribute to sound sensitivity and pain.
       </p>
       <p>
         In cases of MEM or TTTS, conditions characterized by involuntary 
