--- a/mem.html
+++ b/mem.html
@@ -137,7 +137,7 @@
     A <a class="link" href="https://drive.google.com/file/d/1bS_f919kmbgbfTjBa-xfWXOXR60Q5-x1/view?pli=1" target="_blank" rel="noopener noreferrer">2019 article published by Noreña et al.</a> describes acoustic shock and how it relates to the tensor tympani muscle (TTM). Key points within the article have been highlighted.
     </p>
     <p>
-    A <a class="link" href="https://www.sciencedirect.com/science/article/pii/S0378595522000880?via%3Dihub" target="_blank" rel="noopener noreferrer"> 2022 article published by Fournier et al.</a> argues that the term “tonic tensor tympani syndrome” (TTTS) should be abandoned, as the tensor tympani muscle does not demonstrate sustained contraction (tonic) in TTTS, but rather exhibits hyper-reactivity with a reduced contraction threshold.
+    A <a class="link" href="https://www.sciencedirect.com/science/article/pii/S0378595522000880?via%3Dihub" target="_blank" rel="noopener noreferrer"> 2022 article published by Fournier et al.</a> suggests that the term “tonic tensor tympani syndrome” (TTTS) should be abandoned, as the tensor tympani muscle does not demonstrate sustained contraction (tonic) in TTTS, but rather exhibits hyper-reactivity with a reduced contraction threshold.
     </p>
       <p>
         The <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" 
@@ -155,8 +155,8 @@ Treatment of middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS)
 
     <h2>Conservative Management</h2>
     <ul>
-      <li>Gradual sound exposure or low-level background noise (use caution if
-        hyperacusis is present).</li>
+      <li>Gradual sound exposure or low-level background noise <i>(use extreme caution if
+        hyperacusis is present)</i>.</li>
       <li>Stress management and relaxation (breathing, meditation, gentle
         exercises).</li>
       <li>Avoiding loud/sudden auditory triggers and improving posture.</li>
