--- a/patch.html
+++ b/patch.html
@@ -91,8 +91,7 @@
         such as cartilage reinforcement of the tympanic membrane or Silverstein round/oval window reinforcement may be considered. 
       </p>
       <p>
-        Although clinical data is limited, tympanic membrane patching is valued for its simplicity, 
-        reversibility, low risk profile, and potential to provide some relief for patients with hyperacusis and noxacusis. 
+        Although research is limited, tympanic membrane patching is valued because it is simple, reversible, low-risk, and may provide some relief for people with hyperacusis and noxacusis.
       </p>
       <p>
       <div class="image-row">
@@ -102,7 +101,7 @@
       </p>
       <P>
       The images above show placement of paper patches on the tympanic membrane. The image on the left shows a single patch covering the inferior half of the eardrum, while the image on the right shows two patches covering the superior half.
-      These images are from a <a class="link" href="documents/boedts.pdf" target="_blank" rel="noopener noreferrer">2014 article published by Dr. Michael Boedts</a>, which describes the use of tympanic membrane paper patching to alleviate symptoms of patulous Eustachian tube syndrome. 
+      These images are from a <a class="link" href="documents/boedts.pdf" target="_blank" rel="noopener noreferrer">2014 article published by Dr. Michael Boedts</a>, which describes the use of tympanic membrane paper patching to reduce symptoms of patulous Eustachian tube syndrome. 
       </p>
       <p>
       In a <a class="link" href="https://hyperacusiscentral.org/boedts-interview/" target="_blank" rel="noopener noreferrer">recent interview with Hyperacusis Central</a>, Dr. Boedts discusses paper patching, Botox, local anesthesia (bupivacaine), and how these approaches can be used to treat pain hyperacusis.
