--- a/silverstein.html
+++ b/silverstein.html
@@ -139,20 +139,32 @@ Locating a specialist qualified to perform the Silverstein Procedure can be chal
        <p>
        Below is a list of physicians who are either known to have performed the Silverstein Procedure or have indicated that they are willing to perform it. This list is intended to help patients identify qualified practitioners for consultation or treatment.
        </p>
-       <ul>
-       <li><strong>United States:</strong></li>
-       <ul>
-            <li><a class="link" href="https://www.earrf.org/drherbertsilverstein" target="_blank" rel="noopener noreferrer">Dr. Herbert Silverstein, MD</a> ─ Sarasota, FL (possibly retired)</li>
-            <li><a class="link" href="https://smhfpg.com/doctors/nayak-neil-s-md/" target="_blank" rel="noopener noreferrer">Dr. Neil Nayak, MD</a> ─ Sarasota, FL (offers video consult)</li>
-            <li><a class="link" href="https://michiganear.com/our-physicians/dennis-i-bojrab-m-d/" target="_blank" rel="noopener noreferrer">Dr. Dennis Bojrab Sr., MD</a> ─ Farmington Hills, MI (offers video consult)</li>
-            <li><a class="link" href="https://www.entspecialistspc.com/physicians/dr-matthew-farrugia/" target="_blank" rel="noopener noreferrer">Dr. Matthew Farrugia, DO</a> ─ Novi, MI (does not offer video consult)</li>
-            <li><a class="link" href="https://doctors.intermountainhealth.org/provider/jonathan-l-hatch/2555758" target="_blank" rel="noopener noreferrer">Dr. Jonathan Hatch, MD</a> ─ Murray, UT (does not offer video consult)</li>
-            <li><a class="link" href="https://www.txhealthcare.com/providers/marc-dean-md/" target="_blank" rel="noopener noreferrer">Dr. Mark Dean, MD</a> ─ Fort Worth, TX (offers video consult)</li>
-            <li><a class="link" href="https://www.theearcenter.com/about/" target="_blank" rel="noopener noreferrer">Dr. Ronen Nazarian, MD</a> ─ Beverly Hills, CA (offers video consult)</li>
-        </ul>
-        <li><strong>Belgium:</strong></li>
+<ul class="main-list">
+
+  <li class="white"><strong>United States:</strong></li>
+
+
+    <div class="nested-columns">
+      <ul>
+        <li><a class="link" href="https://www.earrf.org/drherbertsilverstein" target="_blank" rel="noopener noreferrer">Dr. Herbert Silverstein, MD</a> <br> Sarasota, FL <br> <span class="orange">Possibly retired</span></li>
+        <li><a class="link" href="https://smhfpg.com/doctors/nayak-neil-s-md/" target="_blank" rel="noopener noreferrer">Dr. Neil Nayak, MD</a> <br> Sarasota, FL <br> <span class ="green">Offers video consult</span></li>
+        <li><a class="link" href="https://michiganear.com/our-physicians/dennis-i-bojrab-m-d/" target="_blank" rel="noopener noreferrer">Dr. Dennis Bojrab Sr., MD</a> <br> Farmington Hills, MI <br> <span class ="green">Offers video consult</span></li>
+        <li><a class="link" href="https://www.entspecialistspc.com/physicians/dr-matthew-farrugia/" target="_blank" rel="noopener noreferrer">Dr. Matthew Farrugia, DO</a> <br> Novi, MI <br> <span class ="red">Does not offer video consult</span></li>
+      </ul>
+
+      <ul>
+        <li><a class="link" href="https://doctors.intermountainhealth.org/provider/jonathan-l-hatch/2555758" target="_blank" rel="noopener noreferrer">Dr. Jonathan Hatch, MD</a> <br> Murray, UT <br> <span class ="red">Does not offer video consult</span></li>
+        <li><a class="link" href="https://www.txhealthcare.com/providers/marc-dean-md/" target="_blank" rel="noopener noreferrer">Dr. Mark Dean, MD</a> <br> Fort Worth, TX <br> <span class ="green">Offers video consult</span></li>
+        <li><a class="link" href="https://www.theearcenter.com/about/" target="_blank" rel="noopener noreferrer">Dr. Ronen Nazarian, MD</a> <br> Beverly Hills, CA <br> <span class ="green">Offers video consult</span></li>
+      </ul>
+    </div>
+
+</ul>
+
         <ul>
-            <li><a class="link" href="https://www.mariamiddelares.be/en/physicians/michael-boedts" target="_blank" rel="noopener noreferrer">Dr. Michael Boedts</a> ─ Ghent, BE (offers video consult)</li>
+        <li class="white"><strong>Belgium:</strong></li>
+        <ul>
+            <li><a class="link" href="https://www.mariamiddelares.be/en/physicians/michael-boedts" target="_blank" rel="noopener noreferrer">Dr. Michael Boedts</a> <br> Ghent, BE <br> <span class ="green">Offers video consult</span></li>
         </ul>
         </ul>
 
