--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         We created <i>Hyperacusis Guide</i> to address the lack of reliable information and the prevalence of misleading or inaccurate guidance, both online and within the medical community, regarding hyperacusis. People who are newly affected often struggle to find resources to help them understand their condition, manage symptoms safely, and make informed choices about treatment and daily life.
       </p>
       <p>
-      <i>Hyperacusis Guide</i> is made up of individuals who live with hyperacusis, noxacusis, and tinnitus, and we want to share our experiences and advice with others who are suffering from the same conditions.
+      <i>Hyperacusis Guide</i> was created by individuals who live with hyperacusis, noxacusis, and tinnitus, and we want to share our experiences and advice with others who are suffering from the same conditions.
       </p>
       <p>
        Our goal is to provide clear and practical guidance for all individuals living with these conditions, especially those who are newly affected, to help them navigate their journey with knowledge, safety, and support.
@@ -87,6 +87,10 @@
       <p>
       <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> ─ This is our official server and the easiest way to reach us.
       </P>
+
+      <p>
+      <i><strong>Disclaimer:</strong> The information on this website is based on our personal experiences and opinions. It is for informational purposes only and should not replace evaluation or treatment by a qualified medical professional.</i>
+      </p>
     </article>
 <a href="#top" class="back-to-top" aria-label="Back to top"></a>
   </main>
