--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </p>
 
       <p>
-      These measures may seem extreme, and both online sources and many health professionals often advise the opposite.  However, hyperacusis and related conditions remain very poorly understood in the medical community. 
+      These measures may seem extreme, and many health professionals as well as online sources often recommend the opposite. However, hyperacusis and related conditions remain very poorly understood in the medical community. 
         Many individuals with severe symptoms report wishing they had adopted 
         these precautions earlier. Taking careful measures early on is far better than enduring irreversible consequences later.
       </p>
