--- a/mem.html
+++ b/mem.html
@@ -167,7 +167,7 @@ Treatment of middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS)
       <li>Muscle relaxants, anti-seizure, or anti-anxiety medications as
         indicated.</li>
       <li>Targeted botulinum toxin injections for refractory spasms.</li>
-      <li>Combine with conservative therapies and close ENT/audiology follow-up.</li>
+      <li>Combine with conservative therapies and clinical follow-up.</li>
     </ul>
 
     <h2>Surgical Management</h2>
