--- a/silverstein.html
+++ b/silverstein.html
@@ -134,7 +134,7 @@
        <p>
 Locating a specialist qualified to perform the Silverstein Procedure can be challenging, as only a limited number of surgeons have received training in this technique. To further complicate matters, individuals with severe hyperacusis may have difficulty traveling, if they are able to travel at all.
 </p>
-<p>The <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation Fellowship Graduates</a> website provides a list of physicians who trained with Dr. Herbert Silverstein, along with a map of their locations; however, not all of these physicians necessarily perform the Silverstein Procedure.
+<p>The <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation Fellowship Graduates</a> website provides a list of physicians who trained with Dr. Herbert Silverstein, along with a map of their locations. However, not all of the physicians who trained at the Ear Research Foundation necessarily perform the Silverstein Procedure.
 </p>
        <p>
        Below is a list of physicians who are either known to have performed the Silverstein Procedure or have indicated that they are willing to perform it. This list is intended to help patients identify qualified practitioners for consultation or treatment.
