--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -43,6 +43,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"></head>
 <body>
   <a id="top"></a> 
+
+    <div id="copy-overlay">
+  <div id="copy-message">Link copied!</div>
+</div>
+
+
   <header>
     <h1 class="logo">
     <img src="logo.png" class="logo-image"><span class="guide-word"><span class="a">Hyperacusis</span> Guide</span></h1>
@@ -101,7 +107,7 @@
   </p>
 
 <p>
-At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in most instances, communicated directly with the patients to better understand the details of their symptoms. Through this process, we have observed that many patients, researchers, and clinicians describe hyperacusis and noxacusis as two distinct conditions, yet the definition of noxacusis in the literature is often vague. In our view, noxacusis represents a more severe form of loudness hyperacusis in which pain is also present. We have also identified a subset of patients who are not well described in the existing literature, specifically those with neuropathic-related pain and sound sensitivity, and we believe these individuals also fall under the noxacusis category.
+At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in most instances, communicated directly with the patients to better understand the details of their symptoms. Through this process, we have observed that many patients, researchers, and clinicians describe hyperacusis and noxacusis as two distinct conditions, <strong>yet the definition of noxacusis in the literature is often vague</strong>. In our view, noxacusis represents a more severe form of loudness hyperacusis in which pain is also present. We have also identified a subset of patients who are not well described in the existing literature, specifically those with neuropathic-related pain and sound sensitivity, and we believe these individuals also fall under the noxacusis category.
 </p>
 <p>
   We use <strong>noxacusis</strong> as an umbrella term that refers to any form of ear pain caused or worsened by sound. 
@@ -111,7 +117,7 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
 <ul>
 <p>
   <li>
-    <strong>Severe loudness hyperacusis with pain:</strong> This occurs when hyperacusis becomes severe enough 
+    <strong>Severe loudness hyperacusis with pain:</strong> This occurs when loudness hyperacusis becomes severe enough 
     that sound begins to cause pain. In these cases, noxacusis represents a painful progression of hyperacusis 
     rather than a separate disorder. Pain may occur immediately when sound exceeds the individual’s tolerance threshold 
     or may be delayed by hours or days. Once triggered, symptoms can persist for weeks, months, or even years, 
@@ -140,11 +146,13 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
   <ul>
     <li><strong>Reduced sound tolerance</strong>, <strong>tinnitus (often reactive)</strong>, and <strong>discomfort or pain</strong> in more advanced cases. When pain or discomfort is present, it is often accompanied by a sensation of <strong>aural fullness or pressure</strong>. </li>
     <li>Noxacusis is an umbrella term that encompasses both loudness hyperacusis and neuropathic-related sound sensitivity.</li>
-    <li>Hyperacusis is a distinct condition from neuropathic-related sound sensitivity</li>
+    <li>True loudness hyperacusis is a distinct condition from neuropathic-related sound sensitivity</li>
     <li>Can lead to social withdrawal and isolation to avoid sound exposure. Severe cases are usually completely homebound.</li>
     <li>Often triggered by acoustic trauma or prolonged noise exposure.</li>
     <li>Sometimes associated with tonic tensor tympani syndrome (TTTS).</li>
   </ul>
+
+  <a id="severity"></a> 
 
   <div class="page-break" aria-hidden="true"></div>
       <h1>Hyperacusis Severity Scale</h1>
@@ -155,8 +163,14 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
 
     <p>
 
+
 <div class="table">
-  <div class="row1 top"><strong>Hyperacusis Severity Scale</strong></div>
+  <div class="row1 top">
+    <div class="icon" onclick="copyLink()"><i class="fas fa-link link-icon"></i></div>
+  <div class="center-text"><strong>Hyperacusis Severity Scale</strong></div>
+
+
+  </div>
   <div class="row2">
   <strong>Mild</strong>
     <ul>
