--- a/medications.html
+++ b/medications.html
@@ -75,7 +75,7 @@
       <h1>Medications</h1>
 
   <p class="lead">
-    Various medications have been explored for the management of hyperacusis, noxacusis (pain hyperacusis), neuralgia-related sound sensitivity, middle ear myoclonus (MEM), and tonic tensor tympani syndrome (TTTS), though none have demonstrated consistent benefits. 
+    Various medications have been explored for the management of hyperacusis, noxacusis, middle ear myoclonus (MEM), and tonic tensor tympani syndrome (TTTS), though none have demonstrated consistent benefits. 
     </p>
     <p>Some patients report temporary relief with benzodiazepines, such as clonazepam or diazepam, which can help calm neural hyperexcitability and reduce anxiety associated with sound sensitivity. 
     However, due to their <strong>high potential for dependence and withdrawal</strong>, benzodiazepines should generally be avoided, with limited use reserved for specific circumstances such as travel. Prolonged benzodiazepine use may exacerbate hyperacusis and tinnitus symptoms due to interdose withdrawal effects associated with dysregulation of the glutamatergic and GABAergic neurotransmitter systems.
@@ -105,7 +105,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
 
   <ul>
     <li><strong>Benzodiazepines (clonazepam, diazepam):</strong> May temporarily reduce sound sensitivity, muscle spasms, and anxiety but carry an extremely high risk of dependence and withdrawal. <i><uL>Withdrawal from benzodiazepines can be extremely difficult, often requiring a gradual taper over many months. In some cases, individuals experience protracted withdrawals that may persist for years, underscoring the need for great caution when using or discontinuing these medications.</ul></i></li>
-    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Appear to provide greater symptom relief for individuals with sound sensitivity related to neuropathic pain (neuralgia) than for those with true loudness hyperacusis or noxacusis.</li>
+    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Appear to provide greater symptom relief for individuals with sound sensitivity related to neuropathic pain (neuralgia) than for those with true loudness hyperacusis.</li>
          <a id="clomipramine"></a>
     <li><strong>SNRIs (duloxetine):</strong> Explored for central pain modulation, variable effectiveness.</li>
     <li><strong>Anticonvulsants (gabapentin, pregabalin):</strong> May help neuropathic auditory pain, variable effectiveness.</li>
@@ -116,15 +116,15 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       <h1>Clomipramine</h1>
 
   <p>
-  Clomipramine, a tricyclic antidepressant (TCA), warrants special mention as it has become the most widely used medication for managing symptoms of hyperacusis, noxacusis, and sound sensitivity associated with neuralgia. Among the various pharmacologic options explored, clomipramine has shown the most consistent anecdotal benefit in reducing auditory hypersensitivity, pain, and related anxiety.
+  Clomipramine, a tricyclic antidepressant (TCA), warrants special mention as it has become the most widely used medication for managing symptoms of hyperacusis and sound sensitivity associated with neuralgia. Among the various pharmacologic options explored, clomipramine has shown the most consistent anecdotal benefit in reducing auditory hypersensitivity, pain, and related anxiety.
   </p>
   <p>
-  Despite reports of success from many patients, a significant number experienced little to no improvement in their symptoms while using clomipramine. At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and believe we have identified a specific subgroup that responds most favorably to clomipramine. These patients typically share the following characteristics:
+  Despite reports of success from many patients, a significant number experienced little to no improvement in their symptoms while using clomipramine. At <i>Hyperacusis Guide</i>, we believe we have identified a specific subgroup that responds most favorably to clomipramine. These patients typically share the following characteristics:
   </p>
   <ul>
-      <li><strong>Hyperacusis symptoms are mild or absent:</strong> Patients are able to carry out normal daily activities, can usually continue working a quiet job, and can tolerate normal environmental sounds without fear of a permanent setback, though some require the use of hearing protection. Aural fullness is generally mild or absent in these individuals.<i><ul>Based on our knowledge, no patients who are truly catastrophic and homebound have reported meaningful improvement in their symptoms after taking clomipramine.</ul></i></li>
+      <li><strong>Hyperacusis symptoms are mild or absent:</strong> Patients are able to carry out normal daily activities, can usually continue working a quiet job, and can tolerate normal environmental sounds without fear of a permanent setback, though some require the use of hearing protection. Aural fullness is generally mild or absent in these individuals.<i><ul>Based on our knowledge, no patients who are truly severe and homebound have reported meaningful improvement in their symptoms after taking clomipramine.</ul></i></li>
       <li><strong>No permanent setbacks:</strong> Patients may have a temporary setback from exposing to sound above their tolerance threshold, but return to their previous baseline after a period of rest.</li>
-    <li><strong>Neuropathic pain (neuralgia):</strong> Almost all of these patients complain of pain that would be most consistent with neuralgia, frequently a burning sensation that radiates from around the ear into the face and head. True loudness hyperacusis and noxacusis patients usually complain of more focused pain that localizes to the middle ear (deep to the tympanic membrane).</li>
+    <li><strong>Neuropathic pain (neuralgia):</strong> Almost all of these patients complain of pain that would be most consistent with neuralgia, frequently a burning sensation that radiates from around the ear into the face and head. True loudness hyperacusis patients usually complain of more focused pain that localizes to the middle ear (deep to the tympanic membrane).</li>
 
   </ul>
   <p>
@@ -147,7 +147,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       <h1>Botox</h1>
 
       <p>
-        Botox (botulinum toxin type A) has been investigated as a potential treatment for hyperacusis, noxacusis, middle ear myoclonus (MEM), and tonic tensor tympani syndrome (TTTS) because of its ability to temporarily weaken overactive muscles that may contribute to sound sensitivity and pain.
+        Botox (botulinum toxin type A) has been studied as a potential treatment for hyperacusis, noxacusis, middle ear myoclonus (MEM), and tonic tensor tympani syndrome (TTTS) because of its ability to temporarily weaken overactive muscles that may contribute to sound sensitivity and pain.
       </p>
       <p>
         In cases of MEM or TTTS, conditions characterized by involuntary 
