--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -107,7 +107,7 @@
   </p>
 
 <p>
-At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in most instances, communicated directly with the patients to better understand the details of their symptoms. Through this process, we have observed that many patients, researchers, and clinicians describe hyperacusis and noxacusis as two distinct conditions, <strong>yet the definition of noxacusis in the literature is often vague</strong>. In our view, noxacusis represents a more severe form of loudness hyperacusis in which pain is also present. We have also identified a subset of patients who are not well described in the existing literature, specifically those with neuropathic-related pain and sound sensitivity, and we believe these individuals also fall under the noxacusis category.
+At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in most instances, communicated directly with the patients to better understand the details of their symptoms. Through this process, we have observed that many patients, researchers, and clinicians describe hyperacusis and noxacusis as two distinct conditions, yet the definition of noxacusis in the literature is often vague. In our view, noxacusis represents a more severe form of loudness hyperacusis in which pain is also present. We have also identified a subset of patients who are not well described in the existing literature, specifically those with neuropathic-related pain and sound sensitivity, and we believe these individuals also fall under the noxacusis category.
 </p>
 <p>
   We use <strong>noxacusis</strong> as an umbrella term that refers to any form of ear pain caused or worsened by sound. 
@@ -121,17 +121,28 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
     that sound begins to cause pain. In these cases, noxacusis represents a painful progression of hyperacusis 
     rather than a separate disorder. Pain may occur immediately when sound exceeds the individual’s tolerance threshold 
     or may be delayed by hours or days. Once triggered, symptoms can persist for weeks, months, or even years, 
-    and often fluctuate in intensity. This pain is typically focused and localizes to the middle ear (deep to the tympanic membrane), is often sharp or stabbing, and may be accompanied by a sensation of aural fullness or pressure. 
+    and often fluctuate in intensity. The pain is typically focused and localizes to the middle ear (deep to the tympanic membrane), is often sharp or stabbing, and may be accompanied by a sensation of aural fullness or pressure. 
   </li>
   </p>
   <p>
   <li>
-    <strong>Neuropathic-related sound sensitivity:</strong> This occurs when heightened sound sensitivity develops 
-    secondary to neuropathic pain (neuralgia). Although still considered noxacusis, the underlying mechanism differs 
-    from loudness hyperacusis. Patients often report burning, aching, or stabbing pain around the ear 
-    that may radiate into the face or head. Based on our observations, these individuals may respond better to medications 
-    such as <a class="link" href="medications.html#clomipramine" target="_blank" rel="noopener noreferrer">clomipramine</a> than those with true loudness hyperacusis.
+ 
+  <strong>Neuropathic-related sound sensitivity:</strong> 
+  This occurs when heightened sound sensitivity develops alongside or
+  secondary to neuropathic pain (neuralgia). Although still 
+  considered a form of noxacusis, the underlying mechanism 
+  differs from loudness hyperacusis. Patients often report 
+  burning, aching, or stabbing pain around the ear that may 
+  radiate into the face or head. Individuals in 
+  this group may experience these neuropathic symptoms 
+  <i>without major signs of traditional hyperacusis</i>, such as 
+  loudness intolerance, aural fullness, or worsening overall 
+  condition from sound. Based on our observations, these 
+  patients may respond better to medications such as 
+  <a class="link" href="medications.html#clomipramine" target="_blank" rel="noopener noreferrer">clomipramine</a> than those with true loudness hyperacusis.
   </li>
+
+  <p><i>Note: There may be some overlap between these two subtypes of noxacusis, and it is possible for an individual to display symptoms from both groups simultaneously, but most people still tend to fall primarily into one group.</i></p>
   </p>
 </ul>
 
@@ -148,11 +159,10 @@ At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and, in 
     <li>Noxacusis is an umbrella term that encompasses both loudness hyperacusis and neuropathic-related sound sensitivity.</li>
     <li>True loudness hyperacusis is a distinct condition from neuropathic-related sound sensitivity</li>
     <li>Can lead to social withdrawal and isolation to avoid sound exposure. Severe cases are usually completely homebound.</li>
+    <a id="severity"></a> 
     <li>Often triggered by acoustic trauma or prolonged noise exposure.</li>
     <li>Sometimes associated with tonic tensor tympani syndrome (TTTS).</li>
-  </ul>
-
-  <a id="severity"></a> 
+  </ul> 
 
   <div class="page-break" aria-hidden="true"></div>
       <h1>Hyperacusis Severity Scale</h1>
